# SBTS

./: .gitignore  README.md  contract.py  experiments_demo.ipynb  pyproject.toml  requirements.txt
metrics/: discriminative_score.py  eval_functions.py  get_params.py  predictive_score.py
metrics/fbm_stock_metrics/configs/: config.py
metrics/fbm_stock_metrics/src/evaluations/: scores.py  summary.py
models/: sbts_multi.py  sbts_multi_markovian.py  sbts_uni.py  sbts_uni_markovian.py
models/High_Rank_PCF_GAN_main/src/: utils.py
models/High_Rank_PCF_GAN_main/src/evaluations/: augmentations.py  eval_helper.py  evaluations.py  loss.py  metrics.py  test_metrics.py
models/hyperparams_selection/: markovian_optimal_multi.py  markovian_optimal_uni.py
src/sbts_plugin/: __init__.py  contract.py  ts_benchmark_plugin.toml
src/sbts_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sbts_plugin/models/: __init__.py  sbts_multi.py  sbts_multi_markovian.py  sbts_uni.py  sbts_uni_markovian.py
utils/: data_generation.py  data_loading.py  data_preprocessing.py
